# docs/swagger.yaml
@@ -73,7 +73,6 @@ definitions:
       status:
         type: boolean
     type: object
-host: localhost:8080
 info:
   contact:
     email: salvatimartina97@gmail.com
@@ -87,7 +86,7 @@ paths:
       parameters:
       - description: Multicast group id group
         in: path
-        name: multicastId
+        name: mId
         required: true
         type: string
       produces:
@@ -110,7 +109,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get Multicast Group
+      description: Get Multicast Groups
       produces:
       - application/json
       responses:
@@ -122,7 +121,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Get Multicast Group
+      summary: Get Multicast Groups
       tags:
       - groups
     post:
@@ -147,18 +146,18 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Create Multicast Group
+      summary: Create Multicast Group or join in an existing group
       tags:
       - groups
   /groups/{mId}:
     get:
       consumes:
       - application/json
-      description: Get Multicast Group by id
+      description: Get Multicast GroupInfo by id
       parameters:
       - description: Multicast group id group
         in: path
-        name: multicastId
+        name: mId
         required: true
         type: string
       produces:
@@ -172,17 +171,17 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Get Multicast Group by id
+      summary: Get Multicast GroupInfo by id
       tags:
       - groups
     put:
       consumes:
       - application/json
-      description: Start multicast by id
+      description: Start multicast group by id
       parameters:
       - description: Multicast group id group
         in: path
-        name: multicastId
+        name: mId
         required: true
         type: string
       produces:
@@ -196,18 +195,18 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Start multicast by id
+      summary: Start multicast group by id
       tags:
       - groups
   /messaging/{mId}:
     get:
       consumes:
       - application/json
-      description: Get Message of Group by id
+      description: Get Messages of a Group
       parameters:
       - description: Multicast group id group
         in: path
-        name: multicastId
+        name: mId
         required: true
         type: string
       produces:
@@ -223,17 +222,17 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Get Message of Group by id
+      summary: Get Messages of a Group
       tags:
       - messaging
     post:
       consumes:
       - application/json
-      description: Multicast a message to a group G
+      description: Multicast a message to a group mId
       parameters:
       - description: Multicast group id group
         in: path
-        name: multicastId
+        name: mId
         required: true
         type: string
       - description: Message to multicast
@@ -253,7 +252,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/multicastapp.Response'
-      summary: Multicast a message to a group G
+      summary: Multicast a message to a group mId
       tags:
       - messaging
 swagger: "2.0"
